// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fix fontSmoothing 1`] = `
<div
  style={
    Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "backgroundColor": "black",
      "color": "blue",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`fix fontSmoothing 2`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
      "color": "blue",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`fix fontSmoothing 3`] = `
<div
  style={
    Object {
      "color": "blue",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`lineHeight ensures vertical rhythm 1`] = `
<div
  style={
    Object {
      "color": "black",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 24,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`lineHeight ensures vertical rhythm 2`] = `
<div
  style={
    Object {
      "color": "black",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 26,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "48px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`lineHeight ensures vertical rhythm 3`] = `
<div
  style={
    Object {
      "color": "black",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 48,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "48px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`lineHeight ensures vertical rhythm 4`] = `
<div
  style={
    Object {
      "color": "black",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 50,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "72px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`props 1`] = `
<div
  style={
    Object {
      "color": "black",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`props 2`] = `
<div
  style={
    Object {
      "color": "black",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": 600,
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`props 3`] = `
<div
  style={
    Object {
      "color": "blue",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`props 4`] = `
<div
  style={
    Object {
      "color": "black",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "underline",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`props 5`] = `
<div
  style={
    Object {
      "color": "black",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "arial",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`props 6`] = `
<div
  style={
    Object {
      "color": "black",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "italic",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`props 7`] = `
<div
  style={
    Object {
      "color": "black",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "10px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`props 8`] = `
<div
  style={
    Object {
      "color": "black",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 18,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;

exports[`styles are inherited 1`] = `
<div
  style={
    Object {
      "color": "black",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
>
  <div
    style={
      Object {
        "color": "orange",
        "display": "inline",
        "flexDirection": "column",
        "fontSize": 14,
        "fontStyle": "italic",
        "fontWeight": 600,
        "lineHeight": "undefinedpx",
        "msHyphens": "auto",
        "overflowWrap": "break-word",
        "position": "relative",
        "whiteSpace": "pre-wrap",
      }
    }
  >
    hi
     
    <div
      style={
        Object {
          "display": "inline",
          "flexDirection": "column",
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": "undefinedpx",
          "msHyphens": "auto",
          "overflowWrap": "break-word",
          "position": "relative",
          "whiteSpace": "pre-wrap",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline",
            "flexDirection": "column",
            "fontWeight": 600,
            "lineHeight": "undefinedpx",
            "msHyphens": "auto",
            "overflowWrap": "break-word",
            "position": "relative",
            "whiteSpace": "pre-wrap",
          }
        }
      >
        w
      </div>
      orl
      <div
        style={
          Object {
            "color": "blue",
            "display": "inline",
            "flexDirection": "column",
            "lineHeight": "undefinedpx",
            "msHyphens": "auto",
            "overflowWrap": "break-word",
            "position": "relative",
            "whiteSpace": "pre-wrap",
          }
        }
      >
        d
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "display": "inline",
        "flexDirection": "column",
        "lineHeight": "undefinedpx",
        "msHyphens": "auto",
        "overflowWrap": "break-word",
        "position": "relative",
        "whiteSpace": "pre-wrap",
      }
    }
  >
    .
  </div>
</div>
`;

exports[`text without props 1`] = `
<div
  style={
    Object {
      "color": "black",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "whiteSpace": "pre-wrap",
    }
  }
/>
`;
